nlw/share/css/st/screen.css
/* ... */
   */
#st-personal-notes .wiki .wiki ,
#st-group-notes .wiki .wiki {
    position: static;
}

.wafl_existence_error {
    color: rgb(200,0,0);
    border-bottom: 0.2em dashed rgb(200,0,0);
}


#st-edit-mode-container {
}

#st-edit-mode-view {
}

#st-page-editing-uploadbutton {
    z-index: 1500;
    float: left;
}

#st-page-editing-tagbutton {
    z-index: 1500;
    float: left;
    padding-left: 8px;
}

/* Comment UI */


body#st-commentui {
    background: #ffffff;
}

#st-commentui-container {
}

#st-commentui-container a:visited,
#st-commentui-container a:active {
    color: #00f;
}

#st-commentui-notetop {
}

#st-commentui-controls {
}

#st-commentui-savelink {
    background-color: #fffebd;
}

#st-commentui-cancellink {
}

#st-commentui-customfield {
}

#st-commentui-customfield .customfield-label {
}

#st-commentui-customfield .customfield-input {
}

#st-commentui-textarea {
    padding: 0;
    border-style: inset;
    border-width: thin;
    background-color: #ffd;
    color: black;
    width: 99%;
    height: 150px;
}

/*

=head2 Send Page by Email

Styles for the "Send Page by Email" popup, accessed from the "Email" dropdown
menu on the page bar.

*/

#email-page {
    background: #ffffff;
    font-size: 80%;
}

.email-page-row {
    clear: both;
}

.email-page-row-label {
    font-weight: bold;
    float: left;
    width: 5em;
    margin-left: 1.2em;
    margin-right: 1.2em;
    text-align: right;
}

.email-page-row-content {
    float: left;
    padding-bottom: 1.2em;
}

.email-page-user-select-column {
    float: left;
    padding-right: 1.2em;
    width: 14em;
}

#email-page-user-select-column-center {
    width: 10em;
}

.email-page-user-select-label {
    text-align: center;
}

#email-page-user-select-add-label {
    padding-top: 1em;
}

.email-page-user-select-button-group {
    padding-bottom: 2em;
}

.email-page-input {
    width: 120px;
    clear: both;
    display: block;
}

.email-page-select {
   width: 175px;
   font-size: x-small;
}

#email-page-error-message {
    text-align: center;
}

#email-page-buttons-container {
    clear: both;
}

#email-page-buttons {
    text-align: center;
}

.email-page-input-new {
    width: 175px;
}

/* Lightbox */
.st-lightbox {
    position: fixed;
    left: 0px;
    top: 0px;
    width: 100%;
    height: 100%;
    background: url("../../images/st/popup/bg.png");
    z-index: 32767;
}

.st-lightbox-content {
    background-color: #fff;
    color: #000;
    border: 4px solid #ccc;
    padding: 0.5em;
    width: 450px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 10%;
}

/* System Status, Red with icon */

#st-system-status-alert {
    clear: both;
    width: 50%;
    margin-left: 25%;
    margin-top: 10px;
    padding: 5px;
    color: #c00;
    font-weight: bold;
    font-size: 80%;
    background: transparent url("../../images/st/system-message/important-note.gif") no-repeat 5px center;
    padding-left: 60px;
    min-height: 38px;
}
* html #st-system-status-alert {
    height: 38px;
}

/* System Status, Green */

#st-system-status {
    clear: both;
    text-align:center;
    width: 80%;
    margin-left: 10%;
    padding: 8px 0 3px 0;
    color: #0a0;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 80%;
}

/* Custom Header/Footer */

#st-custom-header {
    display: none;
}

#st-custom-footer {
    display: none;
}

/* Include page styles */

.wiki-include-edit-link {
    font-size: 10px;
    font-weight: normal;
}

.wiki-include-page {
    border-left: 1px solid #80a9f3;
    padding-left: 5px;
    padding-right: 10px;
    padding-bottom: 4px;
    margin-left: 12px;
}

.wiki-include-title {
    font-size: 19px;
    font-weight: bold;
    margin-left: 6px;
}

.wiki-include-title a {
    text-decoration: none;
    color: blue;
}

.wiki-include-title a:hover {
    text-decoration: underline;
}

div.wiki-include-content {
    margin-left: 6px;
}

/* WAFL Widget styles */

div.st-widget-dialog {
    margin: 4px;
    border: thin solid #000055;
    padding: 4px;
    background-color: #FFFFFF;
}

div.st-lightbox-dialog {
    background-color: #CCD8FF;
    z-index: 2001;
    padding: 0;
    width: 520px;
    margin: 100px auto;
    border: 1px outset #555;
}

div.jsan-widget-lightbox-content-wrapper {
    background-color: #CCD8FF;
    padding: 5px;
    margin: 0px;
}

.st-widget-buttons {
    padding: 0.2em 0.2em 0.1em 0.2em;
    text-align: right;
}

span.st-widget-cancelbutton {
    padding: 0 0 0 7px;
}

#st-widgets-standardoptionspanel {
    padding: 4px;
    margin: 0;
}

#st-widgets-standardoptionspanel input {
    font-size: 90%;
}

#st-widgets-moreoptionspanel {
    display: none;
    background-color: #F0F0F0;
    padding: 2px 4px 4px 4px;
    margin: 6px 0 4px 0;
    border: 1px solid #B0CCFF;
}

#st-widgets-moreoptionspanel input {
    font-size: 90%;
}

td.st-widget-dialog-widgetlabel {
    padding-top: 10px;
    font-size: 0.8em;
    font-family: Helvetica, Arial, sans-serif;
    white-space: nowrap;
    vertical-align: top;
}

div.st-widgetdialog-wikitext {
    padding-top: 10px;
    font-size: 0.8em;
    font-family: Helvetica, Arial, sans-serif;
    vertical-align: top;
    text-align: center;
}

div.st-widgetdialog-wikitext span.label {
    padding-right: 3px;
    font-style: italic;
}

div.st-widgetdialog-wikitext span.wikitext {
}

p.st-widget-dialog-defaultradio {
    margin: 0;
    padding: 0 0 5px 0;
}

p.st-widget-dialog-choiceradio {
    margin: 0;
    padding: 0;
}

.st-widgets-options {
    margin: 0;
    padding: 0;
}

#st-widgets-moreoptions {
    padding-left: 8px;
    font-size: 0.8em;
}


span.st-widget-dialog-title {
    padding-left: 0;
    font-weight: bold;
    font-size: 1.1em;
    font-family: Verdana, Arial, sans-serif;
    display: block;
}

p.st-widget-description {
    padding: 0;
    margin: 0.2em 0 0.8em 0;
    font-size: 0.9em;
    font-family: Verdana, Arial, sans-serif;
}

.widget_edit_advanced {
    font-size: 0.9em;
    font-family: monospace;
}
/* ... */

